<resources>
    <string name="my_app_name">游戏助手</string>

    <string name="clover">三叶草</string>
    <string name="tickets">抽奖券</string>
    <string name="date_time">时间点</string>
    <string name="save">保存</string>
    <string name="advance">提前</string>
    <string name="number">%1$d</string>
    <string name="calendar">%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS</string>
    <string name="success_msg">修改成功</string>
    <string name="failure_msg">修改失败</string>
    <string name="number_err_msg">请填写正确的数值</string>
    <string name="archive_pick">选择存档文件</string>
    <string name="export_albums">导出明信片</string>
    <string name="no_albums_export">没有待导出的明信片</string>
    <string name="export_albums_msg">成功导出 %1$d 张明信片</string>
    <string name="archive_not_found">存档文件不存在、请更新旅行青蛙</string>
    <string name="archive_permission_denied">无法访问存档文件</string>
    <string name="progress_tips">%1$s / %2$d of %3$d</string>


    <string name="dialog_title">敬告</string>
    <string name="dialog_content_jump">
        \n● 使用该辅助器手机需要Root权限以及悬浮窗权限
        \n● 如果不知道什么是Root则不建议使用该修改功能
        \n● 如果出现跳跃位置不准确请自行调整速度参数
        \n● 点击“我知道了”按钮会向您申请Root权限以及悬浮窗权限
        \n● 点击“我不干了”按钮会退出跳一跳辅助功能
    </string>
    <string name="dialog_content_frog">
        \n● 当前适配“旅行青蛙”版本为1.0.4，如果修改失败，请下载1.0.4版本
        \n● 修改数量前请将“旅行青蛙”后台杀掉
        \n● 支持修改三叶草最大数量9个9，支持修改奖券最大数量3个9
        \n● 明信片导出位置在你手机存储的 DCIM 下“旅行青蛙明信片”文件夹内
    </string>
    <string name="dialog_btn_positive">我知道了</string>
    <string name="dialog_btn_negative">我不干了</string>
</resources>
